syntax = "proto3";

package hello.endpoints.sandbox;
option go_package="pkg/protobuf/sandboxpb";

message UnaryRequest{
    string message = 1;
}
message UnaryResponse{
    string response = 1;
}

service Sandbox {
    rpc Unary(UnaryRequest) returns (UnaryResponse) {}
    rpc ServerStream(UnaryRequest) returns (stream UnaryResponse) {}
    rpc ClientStream(stream UnaryRequest) returns (UnaryResponse) {}
    rpc BidirectionalStream(stream UnaryRequest) returns (stream UnaryResponse) {}
}
